feat: Add responsive menu on mobile devices.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
   IDs are only used for sections to connect menu anchors to sections -->
     <header class="page__header">
         <nav class="navbar__menu">
+            <!-- Responsive menu button -->
+            <div class="hamburger hamburger--squeeze">
+                <div class="hamburger-box">
+                    <div class="hamburger-inner"></div>
+                </div>
+            </div>
             <!-- Navigation starts as empty UL that will be populated with JS -->
             <ul id="navbar__list"></ul>
         </nav>
